--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "file-saver": "^2.0.5",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.2",
@@ -75,6 +77,7 @@
     "tslib": "^2.0.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
